--- a/web/package.json
+++ b/web/package.json
@@ -13,12 +13,18 @@
     "node": ">=16.13.0"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^11.5.0",
     "@shopify/shopify-app-express": "^5.0.4",
     "@shopify/shopify-app-session-storage-sqlite": "^4.0.4",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "mongodb": "^6.9.0",
     "cross-env": "^7.0.3",
-    "path": "^0.12.7",
+    "mongoose": "^8.7.1",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
