--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "connect-sqlite3": "^0.9.15",
+    "express-session": "^1.18.1",
     "fast-xml-parser": "^4.5.0",
     "google-auth-library": "^9.14.2",
     "path": "^0.12.7",
